--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title>Test</title>
    </head>
    <body>
-      Hello, world! I'm in master branch.
+      Hello, world!
    </body>
 </html>
